# universal_flash_cards_chatbot

./: .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  flach-card-chat-bot-a8092d32f287.json  flashcard_chatbot.ipynb  mypy.ini  piccolo_conf.py  piccolo_conf_test.py  pyproject.toml  run-tests.sh
.github/workflows/: cd.yaml  ci.yaml  ci.yml
app/: .dockerignore  Dockerfile  Makefile  create_bot.py  keyboards.py  main.py  main_2.py  piccolo_app.py  pyproject.toml  settings.py  tables.py
app/base_function/: translater.py  translator.py
app/db_function/: personal.py
app/db_functions/: personal.py
app/handlers/: __init__.py
app/handlers/channels/: __init__.py
app/handlers/personal/: __init__.py  keyboards.py  start.py  translate_msg.py
app/piccolo_migrations/: 2022-11-21T23-37-22-170813.py  2022-11-27T19-45-33-321631.py  2022-11-30T22-25-22-178627.py  2022-12-04T19-11-58-130853.py  2022-12-19T17-40-47-876914.py
app/scheme/: trans.py  transdata.py
app/src/: main.py
app/tests/: conftest.py  test_db.py  utils.py
app/tests/tests_base_functions/: test_get_translate.py
app/tests/tests_db_functions/: conftest.py  test_db_function_personal.py
app/tests/tests_handlers/: conftest.py  test_start.py  utils.py
bot_app/: piccolo_app.py  tables.py
bot_app/tests/: test_db.py
tests/: conftest.py  test_first.py  test_get_translate.py  test_hello.py  utils.py
tests/tests_db/: conftest.py  test_db_function_personal.py  utils.py
tests/tests_handlers/: conftest.py  mocked_bot.py  test_start.py  utils.py
