[tool.poetry]
name = "flash_cards_chatbot"
version = "0.1.0"
description = "telegram bot for working with flash cards"
authors = ["team starperov.net"]

# NOTE:
# without this explicit reference to PyPI, poetry may raise exception "PackageNotFound".
[[tool.poetry.source]]
name = "the_pypi"
url = "https://pypi.org/simple"
default = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
piccolo = {extras = ["all"], version = "^0.96.0"}
uvicorn = "^0.18.3"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
google-cloud-translate = "^3.8.4"
asyncpg = "^0.27.0"
ipython = "^8.6.0"
cryptography = "36.0.2"
pytest-asyncio = "^0.20.2"
aiogram = "3.0.0b6"
executor = "^23.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"
flake8 = "^5.0.4"
isort = "*"
pydocstyle = "*"
pylint = "*"
pytest = "==7.*"
pytest-cov = "*"
pytest-mock = "*"
coverage = "==6.*"
autoflake = "^1.7"



[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
